# pura

./: .gitignore  README.md  default.nix  flake.nix  pura.cabal  pura.nix  shell.nix
app/: Main.hs
example/: hs.yaml
lib/Pura/: Build.hs  Parse.hs
test/: BuildTest.hs  Test.hs
